fix: apply yi font to body, covering all yi text rendering

--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ html, body {
   justify-content: center;
 
   background-color: var(--c-bone-stain);
+  font-family: var(--current-editor-font);
 }
 
 .app {
